--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,31 @@
 /* Put your CSS here */
 html, body {
-    margin: 20px;
+    margin: 0px;
 }
+
+.brand.sub-brand {
+  padding-right: 0;
+  padding-left: 0;
+  margin-left: 20px;
+  float: right;
+  font-weight: bold;
+  color: #000 !important;
+  text-shadow: 0 1px 0 rgba(255,255,255,.1), 0 0 30px rgba(255,255,255,.125) !important;
+  -webkit-transition: all .2s linear !important;
+  -moz-transition: all .2s linear !important;
+  transition: all .2s linear !important;
+}
+
+.navbar .brand {
+  padding-right: 0;
+  padding-left: 0;
+  margin-left: 0px;
+  margin-right: 20px;
+  font-weight: bold;
+  color: #FEFEFE;
+  text-shadow: 0 1px 0 rgba(255,255,255,.1), 0 0 30px rgba(255,255,255,.125) !important;
+  -webkit-transition: all .2s linear !important;
+  -moz-transition: all .2s linear !important;
+  transition: all .2s linear !important;
+}
+
