--- a/js/app/templates/header.html
+++ b/js/app/templates/header.html
@@ -1,8 +1,21 @@
 <header id="header">
   <div class="container">
-    <div class="header-inner responsive">
-      <a id="site-logo">Arc<span>GIS</span> Composer</a>
+    <div class="row">
+      <div class="column-24">
+        <a href="/">
+          <h2 id="site-logo">Arc<span>GIS</span> Composer</h2>
+        </a>
+        <nav>
+          <ul>
+            <li><a href="#">About</a></li>
+          </ul>
+        </nav>
+        <div id="esri-logo">Esri</div>
+      </div>
     </div>
   </div>
 </header>
+
+
+
 
