--- a/js/app/templates/sidebar.html
+++ b/js/app/templates/sidebar.html
@@ -1,3 +1,4 @@
-<div class="sidebar-item gray8">Add</div>
-<div class="sidebar-item gray8">Find</div>
-<div class="sidebar-item gray8">Settings</div>
+<div class="sidebar-item">Add</div>
+<div class="sidebar-item">Find</div>
+<div class="sidebar-item">WorkSpace</div>
+<div class="sidebar-item">Settings</div>
