--- a/js/app/templates/header.html
+++ b/js/app/templates/header.html
@@ -7,6 +7,7 @@
         </a>
         <nav>
           <ul>
+            <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
           </ul>
         </nav>
