--- a/js/app/templates/header.html
+++ b/js/app/templates/header.html
@@ -1,5 +1,5 @@
 <header id="header">
-  <div class="container">
+  <div class="">
     <div class="row">
       <div class="column-24">
         <a href="/">
