adding UI for adding files

--- a/js/app/templates/finder.html
+++ b/js/app/templates/finder.html
@@ -1,2 +1,8 @@
 <div><h4>Find Data</h4></div>
 <div class="close">&times;</div>
+<hr/>
+
+Search 
+<div>My Data</div>
+<div>My Groups</div>
+<div>Public Data</div>
