--- a/js/app/templates/add_data.html
+++ b/js/app/templates/add_data.html
@@ -1,2 +1,16 @@
 <div class="title"><h4>Add Data</h4></div>
 <div class="close">&times;</div>
+<hr/>
+<p>Add files from your computer to the map.</p>
+
+<div id="upload_drop">
+  <p class="plus" >+<p>
+  <span>Drop files here to upload.</span>
+</div>
+
+<hr/>
+
+<div id="upload_file">
+  <p>Or choose a file to upload:</p>
+  <input type="file" id="file_upload" multiple="true">
+</div> 
