--- a/js/app/templates/settings.html
+++ b/js/app/templates/settings.html
@@ -1,2 +1,10 @@
 <div><h4>Settings</h4></div>
 <div class="close">&times;</div>
+
+<h5>Projections</h5>
+<div id="settings-projection">
+  <div class="projections" >Albers</div>
+  <div class="projections" >Mercator</div>
+  <div class="projections" >Mollweide</div>
+  <div class="projections" >Eckert1</div>
+</div>
