--- a/js/app/templates/settings.html
+++ b/js/app/templates/settings.html
@@ -3,8 +3,13 @@
 
 <h5>Projections</h5>
 <div id="settings-projection">
-  <div class="projections" >Albers</div>
-  <div class="projections" >Mercator</div>
-  <div class="projections" >Mollweide</div>
-  <div class="projections" >Eckert1</div>
+  <div class="projections settings-button" >Albers</div>
+  <div class="projections settings-button" >Mercator</div>
+  <div class="projections settings-button" >Mollweide</div>
+  <div class="projections settings-button" >Eckert1</div>
+</div>
+
+<h5>Style Basemap</h5>
+<div id="settings-styles">
+  <div class="styles settings-button">Randomizer!</div>
 </div>
