--- a/js/app/templates/settings.html
+++ b/js/app/templates/settings.html
@@ -13,3 +13,11 @@
 <div id="settings-styles">
   <div class="styles settings-button">Randomizer!</div>
 </div>
+
+<h5>Add / Remove Basemap Features</h5>
+<div id="settings-features">
+  <div class="features settings-button">Land</div>
+  <div class="features settings-button">States</div>
+  <div class="features settings-button">Lakes</div>
+  <div class="features settings-button settings-disabled">Counties</div>
+</div>
