--- a/js/app/templates/finder.html
+++ b/js/app/templates/finder.html
@@ -2,7 +2,10 @@
 <div class="close">&times;</div>
 <hr/>
 
-Search 
+<button id="add">Add Test JSON</button>
+
+<div>Search</div> 
 <div>My Data</div>
 <div>My Groups</div>
 <div>Public Data</div>
+
