--- a/js/app/templates/settings.html
+++ b/js/app/templates/settings.html
@@ -2,7 +2,7 @@
 <div class="close">&times;</div>
 
 <h5>Projections</h5>
-<div id="settings-projection">
+<div class="settings-section" id="settings-projection">
   <div class="projections settings-button" >Albers</div>
   <div class="projections settings-button" >Mercator</div>
   <div class="projections settings-button" >Mollweide</div>
@@ -10,14 +10,19 @@
 </div>
 
 <h5>Style Basemap</h5>
-<div id="settings-styles">
+<div class="settings-section" id="settings-styles">
   <div class="styles settings-button">Randomizer!</div>
 </div>
 
 <h5>Add / Remove Basemap Features</h5>
-<div id="settings-features">
+<div class="settings-section" id="settings-features">
   <div class="features settings-button">Land</div>
   <div class="features settings-button">States</div>
   <div class="features settings-button">Lakes</div>
   <div class="features settings-button settings-disabled">Counties</div>
+</div>
+
+<h5>Pan Controls</h5>
+<div class="settings-section" id="settings-panning">
+  <input type="checkbox" id="dynamic-panning" /> Dynamic Panning
 </div>
