--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ hr{
 }
 
 #layers {
-  width:190px;
+  width:225px;
   height:100;
   color:#555;
   position:absolute;
@@ -133,6 +133,7 @@ hr{
   padding:5px;
   border: 2px solid #fff;
   font-size:10px;
+  margin: 3px 0px;
 }
 
 .layer-item .title {
@@ -149,6 +150,11 @@ hr{
   font-size:15px;
 }
 
+.layer-item .close:hover {
+  cursor: pointer;
+  color: #5daddd;
+}
+
 .layer-item .style{
   position:absolute;
   left:5px;
@@ -156,11 +162,23 @@ hr{
   color: #A3A3A3;
 }
 
+.layer-item .style:hover {
+  cursor: pointer;
+  color: #5daddd;
+  text-decoration: underline;
+}
+
 .layer-item .options{
   position:absolute;
   right:5px;
   bottom:5px;
   color: #A3A3A3;
+}
+
+.layer-item .options:hover {
+  cursor: pointer;
+  color: #5daddd;
+  text-decoration: underline;
 }
 
 .brand.sub-brand {
