figuring out how to add new g layers to the map div

--- a/js/app/templates/add_data.html
+++ b/js/app/templates/add_data.html
@@ -1,4 +1,4 @@
-<div class="title"><h4>Add Data</h4></div>
+<div class="title"><h4>Create a new dataset</h4></div>
 <div class="close">&times;</div>
 <hr/>
 <p>Add files from your computer to the map.</p>
