--- a/js/app/templates/settings.html
+++ b/js/app/templates/settings.html
@@ -6,7 +6,7 @@
   <div class="projections settings-button" >Albers</div>
   <div class="projections settings-button" >Mercator</div>
   <div class="projections settings-button" >Mollweide</div>
-  <div class="projections settings-button" >Eckert1</div>
+  <div class="projections settings-button selected" >Eckert1</div>
 </div>
 
 <h5>Style Basemap</h5>
