--- a/js/app/templates/settings.html
+++ b/js/app/templates/settings.html
@@ -1,28 +1,28 @@
-<div><h4>Settings</h4></div>
+<div class="section-title"><span>Settings</span></div>
 <div class="close">&times;</div>
 
-<h5>Projections</h5>
-<div class="settings-section" id="settings-projection">
+<div class="ui-section" id="settings-projection">
+  <span class="item-title">Projections</span>
   <div class="projections settings-button" >Albers</div>
   <div class="projections settings-button" >Mercator</div>
   <div class="projections settings-button" >Mollweide</div>
   <div class="projections settings-button selected" >Eckert1</div>
 </div>
 
-<h5>Style Basemap</h5>
-<div class="settings-section" id="settings-styles">
+<div class="ui-section" id="settings-styles">
+  <span class="item-title">Style Basemap</span>
   <div class="styles settings-button">Randomizer!</div>
 </div>
 
-<h5>Add / Remove Basemap Features</h5>
-<div class="settings-section" id="settings-features">
+<div class="ui-section" id="settings-features">
+  <span class="item-title">Add / Remove Features</span>
   <div class="features settings-button">Land</div>
   <div class="features settings-button">States</div>
   <div class="features settings-button">Lakes</div>
   <div class="features settings-button settings-disabled">Counties</div>
 </div>
 
-<h5>Pan Controls</h5>
-<div class="settings-section" id="settings-panning">
+<div class="ui-section" id="settings-panning">
+  <span class="item-title">Map Controls</span>
   <input type="checkbox" id="dynamic-panning" /> Dynamic Panning
 </div>
