--- a/js/app/templates/finder.html
+++ b/js/app/templates/finder.html
@@ -1,11 +1,13 @@
-<div><h4>Find Data</h4></div>
+<div class="section-title"><span>Find Data</span></div>
 <div class="close">&times;</div>
-<hr/>
 
-<button id="add">Add Test JSON</button>
+<h5>Search</h5>
+<div class="ui-section">
+  <input type="text" id="search-agol" placeholder="Search ArcGIS" />
+</div>
 
-<div>Search</div> 
-<div>My Data</div>
-<div>My Groups</div>
-<div>Public Data</div>
+<h5>Test Data</h5>
+<div class="ui-section">
+  <button class="btn" id="add">CO Snow Totals</button>
+</div> 
 
