--- a/js/app/templates/finder.html
+++ b/js/app/templates/finder.html
@@ -4,6 +4,7 @@
 <h5>Search</h5>
 <div class="ui-section">
   <input type="text" id="search-agol" placeholder="Search ArcGIS" />
+  <ul id="search-items"></ul>
 </div>
 
 <h5>Test Data</h5>
