--- a/js/app/templates/settings.html
+++ b/js/app/templates/settings.html
@@ -15,11 +15,10 @@
 </div>
 
 <div class="ui-section" id="settings-features">
-  <span class="item-title">Add / Remove Features</span>
-  <div class="features settings-button">Land</div>
-  <div class="features settings-button">States</div>
-  <div class="features settings-button">Lakes</div>
-  <div class="features settings-button settings-disabled">Counties</div>
+  <div class="features settings-button world">World</div>
+  <div class="features settings-button states">States</div>
+  <div class="features settings-button water">Lakes</div>
+  <div class="features settings-button settings-disabled counties">Counties</div>
 </div>
 
 <div class="ui-section" id="settings-panning">
