--- a/js/app/templates/settings.html
+++ b/js/app/templates/settings.html
@@ -18,7 +18,7 @@
   <div class="features settings-button world" id="world">World <span class="edit">edit</span></div>
   <div class="features settings-button states" id="states">States <span class="edit">edit</span></div>
   <div class="features settings-button water" id="water">Lakes <span class="edit">edit</span></div>
-  <div class="features settings-button settings-disabled counties" id="counties">Counties <span class="edit">edit</span></div>
+  <div class="features settings-button counties" id="counties">Counties <span class="edit">edit</span></div>
 </div>
 
 <div class="ui-section" id="settings-panning">
