--- a/js/app/templates/settings.html
+++ b/js/app/templates/settings.html
@@ -15,10 +15,10 @@
 </div>
 
 <div class="ui-section" id="settings-features">
-  <div class="features settings-button world" id="world">World <span class="edit">edit</span></div>
-  <div class="features settings-button states" id="states">States <span class="edit">edit</span></div>
-  <div class="features settings-button water" id="water">Lakes <span class="edit">edit</span></div>
-  <div class="features settings-button counties" id="counties">Counties <span class="edit">edit</span></div>
+  <div class="settings-button world"><span class="features" id="world">World</span> <span class="edit">edit</span></div>
+  <div class="settings-button states"><span class="features" id="states">States</span> <span class="edit">edit</span></div>
+  <div class="settings-button water"><span class="features" id="water">Lakes</span> <span class="edit">edit</span></div>
+  <div class="settings-button counties"><span class="features" id="counties">Counties</span> <span class="edit">edit</span></div>
 </div>
 
 <div class="ui-section" id="settings-panning">
