putting things back together

--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -15,11 +15,10 @@
 </div>
 
 <div class="ui-section" id="settings-features">
-  <span class="item-title">Add / Remove Features</span>
-  <div class="features settings-button">Land</div>
-  <div class="features settings-button">States</div>
-  <div class="features settings-button">Lakes</div>
-  <div class="features settings-button settings-disabled">Counties</div>
+  <div class="settings-button world"><span class="features" id="world">World</span> <span class="edit">edit</span></div>
+  <div class="settings-button states"><span class="features" id="states">States</span> <span class="edit">edit</span></div>
+  <div class="settings-button water"><span class="features" id="water">Lakes</span> <span class="edit">edit</span></div>
+  <div class="settings-button counties"><span class="features" id="counties">Counties</span> <span class="edit">edit</span></div>
 </div>
 
 <div class="ui-section" id="settings-panning">
