--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -15,10 +15,10 @@
 </div>
 
 <div class="ui-section" id="settings-features">
-  <div class="settings-button world"><span class="features" id="world">World</span> <span class="edit">edit</span></div>
-  <div class="settings-button states"><span class="features" id="states">States</span> <span class="edit">edit</span></div>
-  <div class="settings-button water"><span class="features" id="water">Lakes</span> <span class="edit">edit</span></div>
-  <div class="settings-button counties"><span class="features" id="counties">Counties</span> <span class="edit">edit</span></div>
+  <div class="settings-button" id="world"><span class="features" id="world">World</span> <span class="edit">edit</span></div>
+  <div class="settings-button" id=states"><span class="features" id="states">States</span> <span class="edit">edit</span></div>
+  <div class="settings-button" id="water"><span class="features" id="water">Lakes</span> <span class="edit">edit</span></div>
+  <div class="settings-button" id="counties"><span class="features" id="counties">Counties</span> <span class="edit">edit</span></div>
 </div>
 
 <div class="ui-section" id="settings-panning">
