--- a/app/templates/add_data.hbs
+++ b/app/templates/add_data.hbs
@@ -1,14 +1,10 @@
-<div class="title"><h4>Create a new dataset</h4></div>
+<div class="section-title"><span>Create New Dataset</span></div>
 <div class="close">&times;</div>
-<hr/>
-<p>Add files from your computer to the map.</p>
 
 <div id="upload_drop">
-  <p class="plus" >+<p>
-  <span>Drop files here to upload.</span>
-</div>
-
-<div id="upload_file">
-  <p>Or choose a file to upload:</p>
-  <input type="file" id="file_upload" multiple="true">
+  <span id="drag-tip">Drag file here</span>
+  <div id="upload-option">
+    <p>Or choose a file to upload:</p>
+    <span class="btn tertiary" type="file" id="file_upload" multiple="true" >Upload</span>
+  </div>
 </div>
