--- a/app/templates/layer-item.hbs
+++ b/app/templates/layer-item.hbs
@@ -1,5 +1,5 @@
 <div class="layer-item">
-  <div class="title"><h4>{{view.content.title}}</h4></div>
+  <div class="title"><input class="visible" type="checkbox" checked><h4>{{view.content.title}}</h4></div>
   <div class="close">&times;</div>
   <div class="style">Style</div>
   <div class="options">Options</div>
