--- a/app/templates/add_data.hbs
+++ b/app/templates/add_data.hbs
@@ -3,8 +3,10 @@
 
 <div id="upload_drop">
   <span id="drag-tip">Drag file here</span>
+  <div id="upload_list"></div>
   <div id="upload-option">
     <p>Or choose a file to upload:</p>
     <span class="btn tertiary" type="file" id="file_upload" multiple="true" >Upload</span>
   </div>
 </div>
+
