2 bugs fixed; layer title on remove and loading feature positions

--- a/app/templates/layer-item.hbs
+++ b/app/templates/layer-item.hbs
@@ -1,4 +1,4 @@
-<div class="layer-item">
+<div class="layer-item lyr-{{bindAttr class="view.id}}"">
   <div class="title"><input class="visible" type="checkbox" checked><h4>{{view.content.title}}</h4></div>
   <div class="close">&times;</div>
   <div class="style">Style</div>
