json layers now reproject correctly

--- a/app/templates/layer-item.hbs
+++ b/app/templates/layer-item.hbs
@@ -1,6 +1,12 @@
-<div class="layer-item lyr-{{bindAttr class="view.id}}"">
-  <div class="title"><input class="visible" type="checkbox" checked><h4>{{view.content.title}}</h4></div>
+<div class="layer-item lyr-{{bindAttr class="view.id"}}">
+  <div class="title">
+    <input class="visible" type="checkbox" checked>
+    <h4>{{view.content.title}}</h4>
+  </div>
   <div class="close">&times;</div>
-  <div class="style">Style</div>
+  <div class="style">
+    <div class="color"> </div>
+    Style
+  </div>
   <div class="options">Options</div>
 </div>
